# JaNieDojade

./: .cproject  .gitignore  README.md
Datafiles/GTFS/: calendar.txt  calendar_dates.txt  control_stops.txt  feed_info.txt  routes.txt  stops.txt  trips.txt  variants.txt
Datafiles/xml/0001/: 0001.xml
Datafiles/xml/0002/: 0002.xml
Datafiles/xml/0004/: 0004.xml
Datafiles/xml/0005/: 0005.xml
Datafiles/xml/0006/: 0006.xml
Datafiles/xml/0007/: 0007.xml
Datafiles/xml/0008/: 0008.xml
Datafiles/xml/0009/: 0009.xml
Datafiles/xml/000a/: 000a.xml
Datafiles/xml/000c/: 000c.xml
Datafiles/xml/000d/: 000d.xml
Datafiles/xml/000k/: 000k.xml
Datafiles/xml/000l/: 000l.xml
Datafiles/xml/000n/: 000n.xml
Datafiles/xml/000p/: 000p.xml
Datafiles/xml/0010/: 0010.xml
Datafiles/xml/0011/: 0011.xml
Datafiles/xml/0014/: 0014.xml
Datafiles/xml/0015/: 0015.xml
Datafiles/xml/0017/: 0017.xml
Datafiles/xml/0020/: 0020.xml
Datafiles/xml/0023/: 0023.xml
Datafiles/xml/0024/: 0024.xml
Datafiles/xml/0031/: 0031.xml
Datafiles/xml/0032/: 0032.xml
Datafiles/xml/0033/: 0033.xml
Datafiles/xml/0100/: 0100.xml
Datafiles/xml/0101/: 0101.xml
Datafiles/xml/0102/: 0102.xml
Datafiles/xml/0103/: 0103.xml
Datafiles/xml/0104/: 0104.xml
Datafiles/xml/0105/: 0105.xml
GRAPH/: CMakeLists.txt
GRAPH/inc/: Astar.hpp  Defines.hpp  Edge.hpp  Exceptions.hpp  Fascade_graph.hpp  Igraph.hpp  Includes.hpp  Ipathfinder.hpp  List_graph.hpp  Route.hpp  Route_matcher.hpp  Vertex.hpp
GRAPH/src/: Astar.cpp
GRAPH/test/: CMakeLists.txt  Tests.cpp
PARSER/: main.cpp
(+81 files in other folders)
